--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,6 +1,15 @@
-body {
-    overflow-x: hidden;
+.moonlight {
+    width: 100px;
+    
+    &:hover {
+        transition: all 2s;
+        width: 125px;
+    }
+
+    transition: all 2s;
+    width: 100px;
 }
+
 
 nav a {
     text-decoration: none;
@@ -11,9 +20,12 @@ nav li {
     display: inline-block;
     background-color: white;
     text-align: left;
+    width: 90px;
 
     &:hover {
         background-color:rgb(154, 178, 244);
+        transition: all 1s;
+        width: 150px;
     }
 }
 
