--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,7 @@ nav.navegation {
 
 /* Estilos del Index */
 #fondo {
-  background-image: url("MoonlightPhotography.gif");
+  background-image: url("MoonlightPhotography.webp");
   background-repeat: no-repeat;
   background-size: 50%;
   background-position-x: center;
