--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -34,7 +34,7 @@ body {
 
 #fondo {
     @extend #fondo-2 ;
-    background-image: url("MoonlightPhotography.gif");
+    background-image: url("MoonlightPhotography.webp");
     background-repeat: no-repeat;
     background-size: 50%;
     background-position-x: center;
