--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -33,11 +33,11 @@ ul {
     list-style-type: none;
     font-family: 'Quicksand-Regular';
     font-size: large;
-    margin: 10px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     height: 500px;
+    margin-left: -30px;
 }
 
 nav.navegation {
